--- a/aspire/ALB.AppHost/ALB.AppHost.csproj
+++ b/aspire/ALB.AppHost/ALB.AppHost.csproj
@@ -1,18 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0"/>
+    <Sdk Name="Aspire.AppHost.Sdk" Version="9.2.0"/>
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <IsAspireHost>true</IsAspireHost>
-        <UserSecretsId>7ee7303b-7d3a-4787-93d3-7951535455a4</UserSecretsId>
+        <UserSecretsId>7173106a-2fab-436f-96b6-cb9c9f09c03e</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Aspire.Hosting.AppHost"/>
+        <PackageReference Include="Aspire.Hosting.PostgreSQL" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\ALB.Api\ALB.Api.csproj" />
     </ItemGroup>
 
 </Project>
