Add Example management feature with endpoints and adapters
Introduced `Example` entity, DbContext, and adapter for persistence. Added Create and Delete Example endpoints to the API, integrated with `IExamplesAdapter`. Updated services and dependencies, including OpenAPI and Scalar API support.

--- a/src/ALB.Api/ALB.Api.csproj
+++ b/src/ALB.Api/ALB.Api.csproj
@@ -9,11 +9,13 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Npgsql" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
+        <PackageReference Include="Scalar.AspNetCore" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\aspire\ALB.ServiceDefaults\ALB.ServiceDefaults.csproj" />
       <ProjectReference Include="..\ALB.Domain\ALB.Domain.csproj" />
+      <ProjectReference Include="..\ALB.Infrastructure\ALB.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
