Setup IdentityCore groudwork

--- a/src/ALB.Api/appsettings.json
+++ b/src/ALB.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "postgresdb": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
