--- a/src/ALB.Api/ALB.Api.csproj
+++ b/src/ALB.Api/ALB.Api.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Npgsql" />
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
+        <PackageReference Include="FastEndpoints" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
