Add Basetest with some fixes to DbContext

--- a/src/ALB.Infrastructure/ALB.Infrastructure.csproj
+++ b/src/ALB.Infrastructure/ALB.Infrastructure.csproj
@@ -18,6 +18,8 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="NodaTime" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" />
     </ItemGroup>
 
 </Project>
