--- a/src/ALB.Domain/ALB.Domain.csproj
+++ b/src/ALB.Domain/ALB.Domain.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
+      <PackageReference Include="FastEndpoints" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
