--- a/tests/ApiIntegrationTests/ApiIntegrationTests/ApiIntegrationTests.csproj
+++ b/tests/ApiIntegrationTests/ApiIntegrationTests/ApiIntegrationTests.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FastEndpoints" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing"/>
         <PackageReference Include="Testcontainers.PostgreSql" />
         <PackageReference Include="TUnit"/>
