--- a/src/ALB.Api/ALB.Api.csproj
+++ b/src/ALB.Api/ALB.Api.csproj
@@ -25,4 +25,10 @@
       <ProjectReference Include="..\ALB.Infrastructure\ALB.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="UseCases\Endpoints\Admin\ApplicationUser\CreateApplicationUser\" />
+      <Folder Include="UseCases\Endpoints\Admin\ApplicationUser\ReadApplicationUser\" />
+      <Folder Include="UseCases\Endpoints\Admin\ApplicationUser\UpdateApplicationUser\" />
+    </ItemGroup>
+
 </Project>
