--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,31 +1,34 @@
 <Project>
-  <!-- See https://aka.ms/dotnet/msbuild/customize for more details on customizing your build -->
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.2.1" />
-    <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.2.1" />
-    <PackageVersion Include="Aspire.Npgsql" Version="9.2.1" />
-    <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.1" />
-    <PackageVersion Include="FastEndpoints" Version="6.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
-    <PackageVersion Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.4" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
-    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0" />
-    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.2.1" />
-    <PackageVersion Include="NodaTime" Version="3.2.2" />
-    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="9.0.4" />
-    <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.1" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.11.1" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.11.1" />
-    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
-    <PackageVersion Include="Scalar.AspNetCore" Version="2.2.2" />
-    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.4" />
-    <PackageVersion Include="Testcontainers.PostgreSql" Version="4.4.0" />
-    <PackageVersion Include="TUnit" Version="0.19.116" />
-  </ItemGroup>
+    <!-- See https://aka.ms/dotnet/msbuild/customize for more details on customizing your build -->
+    <PropertyGroup>
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.2.1"/>
+        <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.2.1"/>
+        <PackageVersion Include="Aspire.Npgsql" Version="9.2.1"/>
+        <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.1"/>
+        <PackageVersion Include="Bogus" Version="35.6.3"/>
+        <PackageVersion Include="FastEndpoints" Version="6.0.0"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.4"/>
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4"/>
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4"/>
+        <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0"/>
+        <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.2.1"/>
+        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
+        <PackageVersion Include="NodaTime" Version="3.2.2"/>
+        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="9.0.4"/>
+        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0"/>
+        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.1"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.11.1"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.11.1"/>
+        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4"/>
+        <PackageVersion Include="Scalar.AspNetCore" Version="2.2.2"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.4"/>
+        <PackageVersion Include="Testcontainers.PostgreSql" Version="4.4.0"/>
+        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.3"/>
+        <PackageVersion Include="xunit.v3" Version="3.0.0"/>
+    </ItemGroup>
 </Project>
