--- a/tests/ApiIntegrationTests/ApiIntegrationTests/ApiIntegrationTests.csproj
+++ b/tests/ApiIntegrationTests/ApiIntegrationTests/ApiIntegrationTests.csproj
@@ -5,17 +5,24 @@
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints" />
+        <PackageReference Include="Bogus"/>
+        <PackageReference Include="FastEndpoints"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing"/>
-        <PackageReference Include="Testcontainers.PostgreSql" />
-        <PackageReference Include="TUnit"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="Testcontainers.PostgreSql"/>
+        <PackageReference Include="xunit.runner.visualstudio">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="xunit.v3"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\src\ALB.Api\ALB.Api.csproj" />
+        <ProjectReference Include="..\..\..\src\ALB.Api\ALB.Api.csproj"/>
     </ItemGroup>
 
 </Project>
