--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,7 +16,6 @@
         <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4"/>
         <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0"/>
         <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.2.1"/>
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
         <PackageVersion Include="NodaTime" Version="3.2.2"/>
         <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="9.0.4"/>
         <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0"/>
@@ -28,7 +27,6 @@
         <PackageVersion Include="Scalar.AspNetCore" Version="2.2.2"/>
         <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.4"/>
         <PackageVersion Include="Testcontainers.PostgreSql" Version="4.4.0"/>
-        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.3"/>
-        <PackageVersion Include="xunit.v3" Version="3.0.0"/>
+        <PackageVersion Include="TUnit" Version="0.56.5"/>
     </ItemGroup>
 </Project>
