Refactored Tests to use xUnit and Bogus (#68)
* Refactored Tests to use xUnit and Bogus

* Added Tests for User Endpoints

* Removed User and Role Repositories -> Endpoints now use Identity directly,

Fixed Issue with UpdateUserEndpoint.cs

Added Integration Tests for UserEndpoints

* Restructured folders

* Made GroupID nullable for child, so children can be creted without haveing be assigned to a group

Added IntegrationTests for ChildEndpoints

* Removed ConsoleLog

* Aufgrung Druck der Führungsebene wurde wieder auf TUnit gewechselt + Review umgesetzt

* fix disposing of HttpClients in Tests

* fix serialisation tests and use AssemblyMarker again

---------

Co-authored-by: TheBenda <andre.benda@jambit.com>

--- a/tests/ApiIntegrationTests/ApiIntegrationTests/ApiIntegrationTests.csproj
+++ b/tests/ApiIntegrationTests/ApiIntegrationTests/ApiIntegrationTests.csproj
@@ -5,17 +5,19 @@
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints" />
+        <PackageReference Include="Bogus"/>
+        <PackageReference Include="FastEndpoints"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing"/>
-        <PackageReference Include="Testcontainers.PostgreSql" />
+        <PackageReference Include="Testcontainers.PostgreSql"/>
         <PackageReference Include="TUnit"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\src\ALB.Api\ALB.Api.csproj" />
+        <ProjectReference Include="..\..\..\src\ALB.Api\ALB.Api.csproj"/>
     </ItemGroup>
 
 </Project>
