--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,35 +1,35 @@
 <Project>
-    <!-- See https://aka.ms/dotnet/msbuild/customize for more details on customizing your build -->
-    <PropertyGroup>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.4.1"/>
-        <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.4.1"/>
-        <PackageVersion Include="Aspire.Npgsql" Version="9.4.1"/>
-        <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.1"/>
-        <PackageVersion Include="Bogus" Version="35.6.3"/>
-        <PackageVersion Include="FastEndpoints" Version="6.0.0"/>
-        <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8"/>
-        <PackageVersion Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.8"/>
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageVersion>
-        <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8"/>
-        <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.8.0"/>
-        <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.4.1"/>
-        <PackageVersion Include="NodaTime" Version="3.2.2"/><PackageVersion Include="NodaTime.Serialization.SystemTextJson" Version="1.3.0" />
-        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="9.0.4"/>
-        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0"/>
-        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0"/>
-        <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0"/>
-        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0"/>
-        <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0"/>
-        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8"/>
-        <PackageVersion Include="Scalar.AspNetCore" Version="2.6.9"/>
-        <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.8"/>
-        <PackageVersion Include="Testcontainers.PostgreSql" Version="4.6.0"/>
-        <PackageVersion Include="TUnit" Version="0.56.5"/>
-    </ItemGroup>
+  <!-- See https://aka.ms/dotnet/msbuild/customize for more details on customizing your build -->
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.4.1" />
+    <PackageVersion Include="Aspire.Hosting.PostgreSQL" Version="9.4.1" />
+    <PackageVersion Include="Aspire.Npgsql" Version="9.4.1" />
+    <PackageVersion Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.1" />
+    <PackageVersion Include="Bogus" Version="35.6.3" />
+    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.8.0" />
+    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.4.1" />
+    <PackageVersion Include="NodaTime" Version="3.2.2" />
+    <PackageVersion Include="NodaTime.Serialization.SystemTextJson" Version="1.3.0" />
+    <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="9.0.4" />
+    <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
+    <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
+    <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+    <PackageVersion Include="Scalar.AspNetCore" Version="2.6.9" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.8" />
+    <PackageVersion Include="Testcontainers.PostgreSql" Version="4.6.0" />
+    <PackageVersion Include="TUnit" Version="0.56.5" />
+  </ItemGroup>
 </Project>
