Implement JWT based Auth

--- a/src/ALB.Api/appsettings.Development.json
+++ b/src/ALB.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "Issuer": "http://localhost:5206",
+    "Audience": "http://localhost:5206",
+    "ExpirationInMinutes": 30,
+    "Secret": "12308sdfasd-hkjashew-098123-fdashl;uk12"
   }
 }
