--- a/src/ALB.Api/ALB.Api.csproj
+++ b/src/ALB.Api/ALB.Api.csproj
@@ -17,6 +17,7 @@
         </PackageReference>
         <PackageReference Include="NodaTime.Serialization.SystemTextJson" />
         <PackageReference Include="Scalar.AspNetCore" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     </ItemGroup>
 
     <ItemGroup>
