--- a/src/ALB.Infrastructure/ALB.Infrastructure.csproj
+++ b/src/ALB.Infrastructure/ALB.Infrastructure.csproj
@@ -22,4 +22,8 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Adapters\" />
+    </ItemGroup>
+
 </Project>
