Add Cronjob to delete old RefreshTokens

--- a/src/ALB.Api/appsettings.Development.json
+++ b/src/ALB.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "TickerQBasicAuth": {
+    "Username": "admin",
+    "Password": "admin"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,6 +13,7 @@
     "Issuer": "http://localhost:5206",
     "Audience": "http://localhost:5206",
     "ExpirationInMinutes": 30,
+    "RefreshExpirationInMinutes": 60,
     "Secret": "12308sdfasd-hkjashew-098123-fdashl;uk12"
   }
 }
