Fix Integration Tests

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,6 +15,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageVersion>
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.8.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
@@ -34,6 +38,6 @@
     <PackageVersion Include="TickerQ" Version="2.5.3" />
     <PackageVersion Include="TickerQ.Dashboard" Version="2.5.3" />
     <PackageVersion Include="TickerQ.EntityFrameworkCore" Version="2.5.3" />
-    <PackageVersion Include="TUnit" Version="0.56.5" />
+    <PackageVersion Include="TUnit" Version="1.0.78" />
   </ItemGroup>
 </Project>
