--- a/tests/ApiIntegrationTests/ApiIntegrationTests/ApiIntegrationTests.csproj
+++ b/tests/ApiIntegrationTests/ApiIntegrationTests/ApiIntegrationTests.csproj
@@ -4,13 +4,14 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <IsTestProject>true</IsTestProject>
         
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Bogus"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing"/>
         <PackageReference Include="Testcontainers.PostgreSql"/>
         <PackageReference Include="TUnit"/>
